feat: jdkhttp 传输层以 HttpURLConnection 重写（Java 8 兼容 + 响应截断检测）
- java.net.http 模块为 JDK 11+，wop-sdk-jdkhttp 整体重写为 HttpURLConnection 实现；
  公共构造器 (String, HttpClient) 随依赖移除而删除（API 面变化，见决议上报）
- 新增 verifyLength 完读后台账校验：HttpURLConnection 对「声明 Content-Length=N 实收
  更少即 FIN」静默返回 EOF（与 java.net.http 的 too few bytes returned 不同），
  以 getContentLengthLong() 比对实收长度，恢复截断显式拦截契约
- POST + wireBody=null（buildRequest 空数组归一产物）发送空体而非 NPE，新增
  postWithoutWireBodySendsEmptyBody 用例
- collectHeaders 条件简化（非 null key 的 value 列表恒非空，死分支清除）
- 测试源 Java 8 化：headers() varargs helper、readAll 循环读尽